Add GetPollutionDensityOfRect endpoint
