# backend/internal/pollution/model.go
@@ -11,6 +11,12 @@ type Pollution struct {
 	Pollutant string    `json:"pollutant"`
 }
 
+type PollutionDensity struct {
+	Time      time.Time `json:"time"`
+	Pollutant string    `json:"pollutant"`
+	Density   float64   `json:"density"`
+}
+
 type PollutionValueResponse struct {
 	Time      time.Time `json:"time"`
 	Value     float64   `json:"value"`
